fix scroll overflow on tab container

--- a/src/app/components/tab-bar/tab-bar.component.scss
+++ b/src/app/components/tab-bar/tab-bar.component.scss
@@ -2,6 +2,34 @@
   display: flex;
   height: 30px;
   align-items: center;
+  overflow-x: overlay;
+
+  &::-webkit-scrollbar {
+    height: 3px;
+  }
+
+  &::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+  }
+
+  &::-webkit-scrollbar-track {
+    /*background:#eee;
+    border: thin solid lightgray;
+    box-shadow: 0px 0px 3px #dfdfdf inset;
+    border-radius:10px;*/
+    background: rgba(0, 0, 0, 0);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #999;
+    /*border: thin solid gray;*/
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: #7d7d7d;
+  }
 
   .tab {
     padding: 2px 5px;
